@@ -1,4 +1,5 @@
 ---version 2.0.2 released---
+12-aug-2008 - adelikat - movie replay dialog displays fractions of a second
 12-aug-2008 - punkrockguy318 - SDL: fixed segfault when opening .fcm files
 12-aug-2008 - punkrockguy318 - SDL: Saner sound defaults for less choppy sound
 12-aug-2008 - punkrockguy318 - SF [ 2047050 ] SDL: "--special" option fixed for special video scaling filters
